--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-dialog": "^9.2.2",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-paper": "^4.12.4",
     "react-native-safe-area-context": "4.3.1",
     "react-native-svg": "12.3.0",
