--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-native": "0.69.9",
     "react-native-calendar-picker": "^7.1.2",
     "react-native-dialog": "^9.2.2",
-    "react-native-element-dropdown": "^2.1.0",
+    "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-paper": "^4.12.4",
@@ -36,7 +36,8 @@
     "react-native-table-component": "^1.2.2",
     "react-native-webview": "11.23.0",
     "react-native-wheel-color-picker": "^1.2.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "skulpt": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
