--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-gesture-handler": "~2.5.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-paper": "^4.12.4",
+    "react-native-reanimated-table": "^0.0.2",
     "react-native-safe-area-context": "4.3.1",
     "react-native-svg": "12.3.0",
     "react-native-table-component": "^1.2.2",
